--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "author": "axnguyenit",
   "license": "MIT",
   "private": true,
+  "_moduleAliases": {
+    "~": "dist"
+  },
   "scripts": {
     "dev": "nodemon src/main.ts",
+    "prebuild": "rimraf dist",
     "build": "tsc",
     "start": "node dist/main.js",
     "postinstall": "husky install",
@@ -29,6 +33,7 @@
     "express-basic-auth": "^1.2.1",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
+    "module-alias": "^2.2.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "routing-controllers": "^0.10.1",
