--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "prisma:generate": "npx prisma generate",
+    "prisma:reset": "npx prisma migrate reset",
     "prisma:push": "npx prisma db push",
     "prisma:seed": "npx prisma db seed"
   },
