--- a/.eslintrc
+++ b/.eslintrc
@@ -17,45 +17,10 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:unicorn/recommended",
     "plugin:import/recommended"
   ],
-  "plugins": [
-    "@typescript-eslint",
-    "prettier",
-    "simple-import-sort",
-    "import",
-    "unicorn"
-  ],
+  "plugins": ["@typescript-eslint", "prettier", "simple-import-sort", "import"],
   "rules": {
-    "unicorn/filename-case": [
-      "error",
-      {
-        "cases": {
-          "kebabCase": true,
-          "pascalCase": true
-        }
-      }
-    ],
-    "unicorn/import-style": [
-      "error",
-      {
-        "styles": {
-          "util": false,
-          "path": {
-            "named": true
-          }
-        }
-      }
-    ],
-    "unicorn/prefer-top-level-await": "off",
-    "unicorn/prevent-abbreviations": "off",
-    "unicorn/no-null": "off",
-    "unicorn/no-static-only-class": "off",
-    "unicorn/prefer-module": "off",
-    "unicorn/prefer-node-protocol": "off",
-    "unicorn/numeric-separators-style": "off",
-    "unicorn/no-this-assignment": "off",
     "import/no-unresolved": ["error", { "ignore": ["^~/*"] }],
     "prettier/prettier": [
       "error",
@@ -77,7 +42,11 @@
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": [
       "error",
-      { "argsIgnorePattern": "^_", "vars": "all", "args": "after-used" }
+      {
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_",
+        "args": "after-used"
+      }
     ],
     "@typescript-eslint/adjacent-overload-signatures": "error",
     "@typescript-eslint/array-type": [
@@ -125,7 +94,6 @@
     "@typescript-eslint/ban-ts-comment": "error",
     "@typescript-eslint/ban-tslint-comment": "error",
     "@typescript-eslint/consistent-indexed-object-style": "error",
-    "@typescript-eslint/consistent-type-definitions": ["error", "interface"],
     "@typescript-eslint/consistent-type-imports": [
       "error",
       { "prefer": "type-imports" }
@@ -168,7 +136,11 @@
       },
       {
         "selector": "variable",
-        "format": ["camelCase", "UPPER_CASE", "PascalCase"]
+        "format": ["camelCase", "UPPER_CASE", "PascalCase"],
+        "filter": {
+          "regex": "^_.*$",
+          "match": false
+        }
       },
       {
         "selector": "interface",
@@ -198,7 +170,6 @@
     "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/no-duplicate-imports": ["error"],
     "@typescript-eslint/no-shadow": "error",
-    "@typescript-eslint/no-unused-expressions": ["error"],
     /**
      * plugin:eslint
      */
