--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "strictPropertyInitialization": false,
     "outDir": "dist",
     "baseUrl": "./",
+    "typeRoots": ["./src/core/types"],
     "paths": {
       "~/*": ["src/*"]
     }
