--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "~": "dist"
   },
   "scripts": {
-    "dev": "nodemon src/main.ts",
+    "watch": "nodemon --watch './**/*.ts'",
+    "dev": "tsc-watch --onSuccess \"yarn watch\"",
     "prebuild": "rimraf dist",
     "build": "tsc",
     "start": "node dist/main.js",
@@ -49,6 +50,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/module-alias": "^2.0.1",
     "@types/node": "^18.11.19",
     "@types/nodemailer": "^6.4.7",
     "@types/swagger-ui-express": "^4.1.3",
@@ -62,7 +64,6 @@
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-unicorn": "^45.0.2",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
     "nodemon": "^2.0.20",
@@ -70,6 +71,7 @@
     "prettier": "^2.8.3",
     "prisma": "^4.10.0",
     "ts-node": "^10.9.1",
+    "tsc-watch": "^6.0.0",
     "typescript": "^4.9.5"
   },
   "nodemonConfig": {
@@ -97,6 +99,6 @@
     ]
   },
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node prisma/seeds/run-seed.ts"
   }
 }
